Added professor page controller